test/failing/dupfield2.trunnel

struct y {
  u8 z;
}

struct x {
  u8 a;
  struct y a;
}
